! Fixed the Information Page layout issues

--- a/css/helpdesk_admin.css
+++ b/css/helpdesk_admin.css
@@ -100,6 +100,12 @@ h3.sd_no_margin
 .shd_credits_names
 {
 	margin-left: 57px;
+	margin-bottom: 12px;
+}
+
+.shd_credits_names hr
+{
+	margin: 0;
 }
 
 .shd_valign_top
